fix: dark mode coloring

--- a/packages/interface-default/src/index.module.css
+++ b/packages/interface-default/src/index.module.css
@@ -7,12 +7,12 @@
     0 -1px 2px 0 rgba(161, 161, 170, 0.09);
   --consent-manager-ui-drop-shadow: 0 1px 3px rgba(98, 98, 101, 0.36);
   --consent-manager-ui-switch-slide-bg: #e4e4e7;
-  --consent-manager-ui-switch-nodge-bg: var(--consent-manager-ui-bg);
+  --consent-manager-ui-switch-nodge-bg: #e4e4e7;
   --consent-manager-ui-switch-shadow: 0 1px 3px 2px rgba(24, 24, 27, 0.2),
     0 1px 2px 0 rgba(24, 24, 27, 0.09);
   --consent-manager-ui-primary: #16a34a;
   --consent-manager-ui-toggle-primary: var(--consent-manager-ui-primary);
-  --consent-manager-ui-toggle-bg: var(--consent-manager-ui-bg);
+  --consent-manager-ui-toggle-bg: #f4f4f5;
   --consent-manager-ui-intro-primary: var(--consent-manager-ui-primary);
   --consent-manager-ui-intro-bg: var(--consent-manager-ui-bg);
   --consent-manager-ui-intro-color: #18181b;
@@ -24,7 +24,7 @@
 html[data-theme='dark'] {
   --consent-manager-ui-bg: #18181b;
   --consent-manager-ui-bg-transparent: rgba(24, 24, 27, 0.87);
-  --consent-manager-ui-color: var(--consent-manager-ui-bg);
+  --consent-manager-ui-color: #f4f4f5;
   --consent-manager-ui-inverse-shadow: 0 -1px 3px 2px rgba(250, 250, 250, 0.1),
     0 -1px 2px 0 rgba(250, 250, 250, 0.05);
   --consent-manager-ui-switch-slide-bg: #a1a1aa;
@@ -35,7 +35,7 @@ html[data-theme='dark'] {
   html:not([data-theme]) {
     --consent-manager-ui-bg: #18181b;
     --consent-manager-ui-bg-transparent: rgba(24, 24, 27, 0.87);
-    --consent-manager-ui-color: var(--consent-manager-ui-bg);
+    --consent-manager-ui-color: #f4f4f5;
     --consent-manager-ui-inverse-shadow: 0 -1px 3px 2px rgba(250, 250, 250, 0.1),
       0 -1px 2px 0 rgba(250, 250, 250, 0.05);
     --consent-manager-ui-switch-slide-bg: #a1a1aa;
